# oselia-hearth-di16g-firmware

./: .gitignore  CLAUDE.md  README.md
.github/rulesets/: protect-main.json
.github/workflows/: apply-rulesets.yml  auto-tag.yml  ci.yml  firmware-release.yml
docs/agents/: domain.md
firmware/: BRINGUP.md  CLAUDE.md  FLASHING.md  METRICS.md  OTA_SPEC.md  PINOUT.md  POC_NOTES.md  README.md  RELEASING.md  SPEC.md  UPGRADING.md  config.example.py
firmware/docs/: README.md  bringup.md  flashing.md  hardware.md  mqtt-contract.md  ota.md  releasing.md  spec.md  upgrading.md
firmware/src/: app.py  boot.py  ch9120.py  clock.py  config.py  debounce.py  diag.py  event_queue.py  ha_discovery.py  input_task.py  log.py  main.py  mcp23017.py  mcp_health.py  mcp_select.py  metrics.py  metrics_schema.py  metrics_store.py  mqtt_client.py  mqtt_packets.py  net_stream.py  net_task.py  ota.py  press_detector.py  shared_state.py  status_led.py
homeassistant/: INTEGRATION_SPEC.md  README.md
provisioning/: INSTALL.md  PROVISIONING_SPEC.md  README.md  ha_setup.py  provision.py  pyproject.toml
provisioning/oselia_provision/: __init__.py  __main__.py  board.py  cli.py  console.py  constants.py  dashboard.py  discovery.py  firmware.py  flash.py  monitor.py  mqtt.py  paths.py  quiesce.py  siteconfig.py  uf2.py
provisioning/tests/: test_config_overlay.py  test_oselia_cli.py  test_oselia_dashboard.py  test_oselia_discover.py  test_oselia_mqtt.py  test_oselia_portguard.py  test_oselia_siteconfig.py  test_provision.py
provisioning/uf2/: README.md  flash_nuke.uf2
(+32 files in other folders)
